# poetry-packaging-and-management-tutorial

./: README.md  main.py  pyproject.toml
project/: __init__.py
