[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Adarsha Regmi <adarsharegmi121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
